Add create and save new question functionality

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -20,7 +20,7 @@
 
             </div>
             <div class="col">
-                <a th:href="@{/project/open}" class="btn btn-primary btn-lg" role="button">OPEN PROJECT</a>
+                <a th:href="@{/project/all}" class="btn btn-primary btn-lg" role="button">OPEN PROJECT</a>
             </div>
             <div class="col">
                 <a th:href="@{/project/new}" class="btn btn-primary btn-lg" role="button">NEW PROJECT</a>
