--- a/src/main/resources/templates/project/question_new.html
+++ b/src/main/resources/templates/project/question_new.html
@@ -5,8 +5,15 @@
     <title>Question</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous"/>
+<!--    <style>-->
+<!--        body {-->
+<!--            background-color: navy;-->
+<!--        }-->
+<!--    </style>-->
 </head>
+
 <body>
+
 <div class="container text-center">
     <h2 class=" text-primary m-2">New Question</h2>
 </div>
