--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -6,6 +6,15 @@
     <title>Home</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous"/>
+    <style>
+        body {
+            background-color: #ADD8E6;
+        }
+        .btn-outline-primary {
+        color: white;
+        border-color: white;
+    }
+    </style>
 </head>
 <body>
 <div class="container p-5">
@@ -20,10 +29,10 @@
 
             </div>
             <div class="col">
-                <a th:href="@{/project/all}" class="btn btn-primary btn-lg" role="button">OPEN PROJECT</a>
+                <a th:href="@{/project/all}" class="btn btn-outline-primary btn-lg" role="button">OPEN PROJECT</a>
             </div>
             <div class="col">
-                <a th:href="@{/project/new}" class="btn btn-primary btn-lg" role="button">NEW PROJECT</a>
+                <a th:href="@{/project/new}" class="btn btn-outline-primary btn-lg" role="button">NEW PROJECT</a>
             </div>
             <div class="col">
 
