--- a/src/main/resources/templates/project/participants_all.html
+++ b/src/main/resources/templates/project/participants_all.html
@@ -2,13 +2,13 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Projects</title>
+    <title>Participants</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous"/>
 </head>
 <body>
 <div class="container text-center">
-    <h2 class=" text-primary m-2">Projects</h2>
+    <h2 class=" text-primary m-2">Participants</h2>
 </div>
 <hr>
 <div class="d-flex justify-content-center align-items-center mb-3">
@@ -22,19 +22,29 @@
             <table class="table table-info table-striped table-hover">
                 <thead>
                 <tr>
-                    <th>ID</th>
-                    <th>Short name</th>
-                    <th>Full name</th>
+                    <th>Id</th>
+                    <th>Company</th>
+                    <th>Tasks</th>
+                    <th>Representative</th>
+                    <th>Initials</th>
+                    <th>Position</th>
+                    <th>Email</th>
+                    <th>Phone</th>
                 </tr>
                 </thead>
                 <tbody>
-                <tr th:each="project,stat:${attrProjects.data}"
-                    th:onclick="'window.location.href=\'/project/' + ${project.projectId} + '/questions\''">
+                <tr th:each="participant,stat:${attrParticipants}"
+                    th:onclick="'window.location.href=\'/project/' + ${projectId} + '/participants\''">
                     <!--                    th:onclick="'javascript:showProjectQuestions(\'' + ${project.projectId} + '\');'">-->
 
-                    <td th:text="${project.projectId}">N/A</td>
-                    <td th:text="${project.projectShortName}">N/A</td>
-                    <td th:text="${project.projectFullName}">N/A</td>
+                    <td th:text="${participant.participantId}">N/A</td>
+                    <td th:text="${participant.companyName}">N/A</td>
+                    <td th:text="${participant.tasks}">N/A</td>
+                    <td th:text="${participant.representativesName}">N/A</td>
+                    <td th:text="${participant.initials}">N/A</td>
+                    <td th:text="${participant.position}">N/A</td>
+                    <td th:text="${participant.email}">N/A</td>
+                    <td th:text="${participant.phone}">N/A</td>
                 </tr>
                 </tbody>
             </table>
