--- a/src/main/resources/templates/project/project.html
+++ b/src/main/resources/templates/project/project.html
@@ -35,8 +35,11 @@
         </div>
 
         <div class="d-flex justify-content-center align-items-center mt-4">
-            <div>
-                <input type="submit" class="btn btn-primary" value="SAVE"/>
+            <div class="m-2">
+                <input type="submit" class="btn btn-primary" name="action" value="ADD QUESTION"/>
+            </div>
+            <div class="m-2">
+                <input type="submit" class="btn btn-primary" name="action" value="ADD PARTICIPANT"/>
             </div>
         </div>
 
