--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -29,7 +29,7 @@
 
             </div>
             <div class="col">
-                <a th:href="@{/project/all}" class="btn btn-outline-primary btn-lg" role="button">OPEN PROJECT</a>
+                <a id="openProjectButtonId" th:href="@{/project/all}" class="btn btn-outline-primary btn-lg" role="button">OPEN PROJECT</a>
             </div>
             <div class="col">
                 <a th:href="@{/project/new}" class="btn btn-outline-primary btn-lg" role="button">NEW PROJECT</a>
@@ -41,6 +41,8 @@
 
     </div>
 </div>
+
+<script th:src="@{/js/app.js}"></script>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
