--- a/src/main/resources/templates/project/project.html
+++ b/src/main/resources/templates/project/project.html
@@ -6,40 +6,66 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous"/>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
+    <style>
+        body {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            min-height: 100vh;
+            margin: 0;
+        }
+        .container {
+            background-color: #f8f9fa;
+            width: 50%;
+            margin: 0 auto;
+        }
+        @media (max-width: 600px) {
+            .container {
+            width: 80%;
+            }
+        }
+        ::placeholder {
+            font-size: 14px;
+        }
+        h2 {
+            cursor: default;
+        }
+        a {
+            cursor: pointer;
+        }
+    </style>
 </head>
 <body>
 
-<div class="container text-center">
-    <h2 class=" text-primary m-2">Project name</h2>
-</div>
-<hr>
-<div class="d-flex justify-content-center align-items-center mb-3">
-    <a th:href="@{/home}" class="fs-6 fw-medium text-info">HOME</a>
-</div>
-<hr>
-<!--th:action="@{'/project/' + ${attrProject.projectId} + '/details'}"-->
-<div class="container">
-    <form
+<div class="container p-4">
+    <div class="row align-items-center mb-4">
+        <div class="col">
+            <h2 class="text-info">Project name</h2>
+        </div>
+        <div class="col d-flex justify-content-end">
+            <a th:href="@{/home}" class="fs-6 fw-medium text-info">CANCEL</a>
+        </div>
+    </div>
 
+    <form
             th:action="@{'/project/new'}"
             th:object="${attrProject}"
             method="post"
     >
         <div class="form-group">
             <label for="fullProjectName">Full name:</label>
-            <input th:field="*{projectFullName}" type="text" class="form-control" id="fullProjectName">
+            <input th:field="*{projectFullName}" type="text" class="form-control" id="fullProjectName"
+                   placeholder="Enter full name of your project">
         </div>
         <div class="form-group mt-2">
             <label for="shortProjectName">Short name:</label>
-            <input th:field="*{projectShortName}" type="text" class="form-control" id="shortProjectName">
+            <input th:field="*{projectShortName}" type="text" class="form-control" id="shortProjectName"
+                   placeholder="Enter short name of your project">
         </div>
 
         <div class="d-flex justify-content-center align-items-center mt-4">
-            <div class="m-2">
-                <input type="submit" class="btn btn-primary" name="action" value="ADD QUESTION"/>
-            </div>
-            <div class="m-2">
-                <input type="submit" class="btn btn-primary" name="action" value="ADD PARTICIPANT"/>
+            <div style="width: 100%;">
+                <input type="submit" class="btn btn-primary" name="action" value="CREATE" style="width: 100%"/>
             </div>
         </div>
 
