--- a/src/main/resources/templates/project/projects_all.html
+++ b/src/main/resources/templates/project/projects_all.html
@@ -5,60 +5,111 @@
     <title>Projects</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous"/>
+    <style>
+        body {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            min-height: 100vh;
+            margin: 0;
+        }
+        .container {
+            background-color: #f8f9fa;
+            width: 50%;
+            margin: 0 auto;
+        }
+        @media (max-width: 600px) {
+            .container {
+            width: 80%;
+            }
+        }
+        ::placeholder {
+            font-size: 14px;
+        }
+        h2 {
+            cursor: default;
+        }
+        a {
+            cursor: pointer;
+        }
+        #col1 {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start; /* Aligns items to the start of the container */
+}
+
+#div1 {
+    margin-top: auto; /* Pushes the div to the bottom */
+}
+    </style>
 </head>
 <body>
-<div class="container text-center">
-    <h2 class=" text-primary m-2">Projects</h2>
-</div>
-<hr>
-<div class="d-flex justify-content-center align-items-center mb-3">
-    <a th:href="@{/home}" class="fs-6 fw-medium text-info">HOME</a>
-</div>
-<hr>
-
-<div class="container">
-    <div class="d-flex justify-content-center gap-2">
-        <div>
-            <table class="table table-info table-striped table-hover">
-                <thead>
-                <tr>
-                    <th>ID</th>
-                    <th>Short name</th>
-                    <th>Full name</th>
-                </tr>
-                </thead>
-                <tbody>
-                <tr th:each="project,stat:${attrProjects.data}"
-                    th:onclick="'window.location.href=\'/project/' + ${project.projectId} + '/questions\''">
-                    <!--                    th:onclick="'javascript:showProjectQuestions(\'' + ${project.projectId} + '\');'">-->
-
-                    <td th:text="${project.projectId}">N/A</td>
-                    <td th:text="${project.projectShortName}">N/A</td>
-                    <td th:text="${project.projectFullName}">N/A</td>
-                </tr>
-                </tbody>
-            </table>
-            <nav aria-label="Page navigation example">
-                <ul class="pagination pagination-sm justify-content-center">
-                    <li class="page-item" th:classappend="${currentPage == 0} ? disabled : ''">
-                        <a class="page-link" th:href="@{/project/all(page=${currentPage-1})}" tabindex="-1" aria-disabled="true">Previous</a>
-                    </li>
-                    <li class="page-item" th:each="pageNumber : ${#numbers.sequence(0, totalPages-1)}" th:classappend="${pageNumber == currentPage} ? active : ''">
-                        <a class="page-link" th:href="@{/project/all(page=${pageNumber})}" th:text="${pageNumber + 1}"></a>
-                    </li>
-                    <li class="page-item" th:classappend="${currentPage + 1 == totalPages} ? disabled : ''">
-                        <a class="page-link" th:href="@{/project/all(page=${currentPage+1})}">Next</a>
-                    </li>
-                </ul>
-            </nav>
+<div class="container p-4">
+    <div class="row align-items-center gap-4 mb-4">
+        <div class="col">
+            <h2 class="text-info">Select project</h2>
+        </div>
+        <div class="col d-flex justify-content-end">
+            <a th:href="@{/home}" class="fs-6 fw-medium text-info">CANCEL</a>
+        </div>
+    </div>
+    <div class="row gap-4">
+        <div class="col" id="col1">
+            <div>
+                <p id="projectFullNameDisplay"></p>
+            </div>
+            <div class="row" id="div1">
+                <div class="col">
+                    <a th:href="@{/project/{projectId}/questions/new(projectId=${projectId})}" id="addQuestionsButton"
+                       class="btn btn-primary"
+                       role="button">Protocol</a>
+                </div>
+                <div class="col d-flex justify-content-end">
+                    <a th:href="@{/project/{projectId}/participants(projectId=${projectId})}" id="addParticipantsButton"
+                       class="btn btn-primary"
+                       role="button">Participants</a>
+                </div>
+            </div>
+        </div>
+        <div class="col" id="col2">
+            <select id="projectSelect" class="form-select" size="5" aria-label="Size 4 select example">
+                <option th:each="project,stat:${attrProjects.data}"
+                        th:value="${project.projectId}"
+                        th:data-full-name="${project.projectFullName}"
+                        th:text="${project.projectId + ' - ' + project.projectShortName}">
+                    Please create a project
+                </option>
+            </select>
         </div>
     </div>
 </div>
 
-    <!--<script th:src="@{/js/question.js}"></script>-->
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-            crossorigin="anonymous"></script>
+<script>
+    document.getElementById('projectSelect').addEventListener('change', function() {
+        var selectedOption = this.options[this.selectedIndex];
+        var projectFullName = selectedOption.getAttribute('data-full-name');
+        var projectId = selectedOption.value;
+        document.getElementById('projectFullNameDisplay').textContent = projectFullName;
+        document.getElementById('addQuestionsButton').href = '/project/' + projectId + '/questions';
+        document.getElementById('addParticipantsButton').href = '/project/' + projectId + '/participants';
+    });
+
+    var buttons = document.querySelectorAll('#addQuestionsButton, #addParticipantsButton');
+
+    buttons.forEach(function(button) {
+        button.addEventListener('click', function(e) {
+            var projectSelect = document.getElementById('projectSelect');
+            if (projectSelect.selectedIndex === -1 || projectSelect.value === '') {
+                e.preventDefault();
+                alert('Please select a project first.');
+            }
+        });
+    });
+</script>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
 </body>
 </html>
