Add function to change question status

--- a/src/main/resources/templates/project/projects_all.html
+++ b/src/main/resources/templates/project/projects_all.html
@@ -62,12 +62,7 @@
                 <div class="col">
                     <a th:href="@{/project/{projectId}/questions/new(projectId=${projectId})}" id="addQuestionsButton"
                        class="btn btn-primary"
-                       role="button">Protocol</a>
-                </div>
-                <div class="col d-flex justify-content-end">
-                    <a th:href="@{/project/{projectId}/participants(projectId=${projectId})}" id="addParticipantsButton"
-                       class="btn btn-primary"
-                       role="button">Participants</a>
+                       role="button">Go to project</a>
                 </div>
             </div>
         </div>
