--- a/src/main/resources/templates/project/participant_new.html
+++ b/src/main/resources/templates/project/participant_new.html
@@ -2,80 +2,96 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Participant</title>
+    <title>Project name</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous"/>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
     <style>
-        .custom-container {
-        width: 60%;
-        margin: auto;
-    }
+        body {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            min-height: 100vh;
+            margin: 0;
+        }
+        .container {
+            background-color: #f8f9fa;
+            width: 50%;
+            margin: 0 auto;
+        }
+        @media (max-width: 600px) {
+            .container {
+            width: 80%;
+            }
+        }
+        ::placeholder {
+            font-size: 14px;
+        }
+        h2 {
+            cursor: default;
+        }
+        a {
+            cursor: pointer;
+        }
     </style>
-
 </head>
-
 <body>
 
-<div class="container text-center">
-    <h2 class=" text-primary m-2">Participant</h2>
-</div>
-<hr>
-<div class="d-flex justify-content-center align-items-center mb-3">
-    <a th:href="@{/home}" class="fs-6 fw-medium text-info">BACK</a>
-</div>
-<hr>
-<div class="container custom-container">
-    <div class="d-flex justify-content-center gap-2">
-
-        <form th:action="@{'/project/' + ${projectId} + '/participants/new'}"
-              th:object="${attrParticipant}"
-              method="post"
-              class="row g-3">
-            <div class="col-md-6">
-                <label for="inputCompany" class="form-label">Company name:</label>
-                <input th:field="*{companyName}" type="text" class="form-control" id="inputCompany">
-            </div>
-            <div class="col-md-6">
-                <label for="inputTasks" class="form-label">Tasks:</label>
-                <input th:field="*{tasks}" type="text" class="form-control" id="inputTasks">
-            </div>
-
-            <div class="col-md-10">
-                <label for="inputName" class="form-label">Representative's name:</label>
-                <input th:field="*{representativesName}" type="text" class="form-control" id="inputName">
-            </div>
-            <div class="col-md-2">
-                <label for="inputInitials" class="form-label">Initials:</label>
-                <input th:field="*{initials}" type="text" class="form-control" id="inputInitials">
-            </div>
-
-            <div class="col-md-4">
-                <label for="inputPosition" class="form-label">Position:</label>
-                <input th:field="*{position}" type="text" class="form-control" id="inputPosition">
-            </div>
-            <div class="col-md-4">
-                <label for="inputEmail" class="form-label">Email:</label>
-                <input th:field="*{email}" type="email" class="form-control" id="inputEmail">
-            </div>
-            <div class="col-md-4">
-                <label for="inputPhone" class="form-label">Phone:</label>
-                <input th:field="*{phone}" type="tel" class="form-control" id="inputPhone">
-            </div>
-
-            <div class="d-flex justify-content-center align-items-center mt-4 gap-4">
-                <div>
-                    <input type="submit" class="btn btn-primary" value="SAVE"/>
-                </div>
-                <div>
-                    <a th:href="@{/project/{projectId}/questions/new(projectId=${projectId})}" class="btn btn-primary"
-                       role="button">Add Question</a>
-                </div>
-            </div>
-        </form>
-
+<div class="container p-4">
+    <div class="row align-items-center mb-4">
+        <div class="col">
+            <h2 class="text-info">Participant</h2>
+        </div>
+        <div class="col d-flex justify-content-end">
+            <a th:href="@{'/project/' + ${projectId} + '/questions'}" class="fs-6 fw-medium text-info">CANCEL</a>
+        </div>
     </div>
-</div>
 
+    <form th:action="@{'/project/' + ${projectId} + '/participants/new'}"
+          th:object="${attrParticipant}"
+          method="post"
+          class="row g-3">
+        <div class="col-md-6">
+            <input type="hidden" th:field="*{participantId}">
+            <label for="inputCompany" class="form-label">Company name:</label>
+            <input th:field="*{companyName}" type="text" class="form-control" id="inputCompany">
+        </div>
+        <div class="col-md-6">
+            <label for="inputTasks" class="form-label">Tasks:</label>
+            <input th:field="*{tasks}" type="text" class="form-control" id="inputTasks">
+        </div>
+
+        <div class="col-md-10">
+            <label for="inputName" class="form-label">Representative's name:</label>
+            <input th:field="*{representativesName}" type="text" class="form-control" id="inputName">
+        </div>
+        <div class="col-md-2">
+            <label for="inputInitials" class="form-label">Initials:</label>
+            <input th:field="*{initials}" type="text" class="form-control" id="inputInitials">
+        </div>
+
+        <div class="col-md-4">
+            <label for="inputPosition" class="form-label">Position:</label>
+            <input th:field="*{position}" type="text" class="form-control" id="inputPosition">
+        </div>
+        <div class="col-md-4">
+            <label for="inputEmail" class="form-label">Email:</label>
+            <input th:field="*{email}" type="email" class="form-control" id="inputEmail">
+        </div>
+        <div class="col-md-4">
+            <label for="inputPhone" class="form-label">Phone:</label>
+            <input th:field="*{phone}" type="tel" class="form-control" id="inputPhone">
+        </div>
+
+        <div class="d-flex justify-content-center align-items-center mt-4 gap-4">
+            <div>
+                <input type="submit" class="btn btn-primary" value="Add participant"/>
+            </div>
+        </div>
+    </form>
+
+
+</div>
 
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
