--- a/src/main/resources/templates/project/participants_all.html
+++ b/src/main/resources/templates/project/participants_all.html
@@ -35,6 +35,7 @@
     </style>
 </head>
 <body>
+
 <div class="container p-4">
     <div class="row align-items-center mb-4">
         <div class="col">
@@ -91,7 +92,7 @@
             </ul>
         </nav>
     </div>
-
+</div>
     <script th:src="@{/js/question.js}">
     </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
