--- a/src/main/resources/templates/project/question_edit.html
+++ b/src/main/resources/templates/project/question_edit.html
@@ -2,69 +2,66 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Update Question</title>
+    <title>Project name</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous"/>
-<!--    <style>-->
-<!--        body {-->
-<!--            background-color: navy;-->
-<!--        }-->
-<!--    </style>-->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
+    <style>
+        body {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            min-height: 100vh;
+            margin: 0;
+        }
+        .container {
+            background-color: #f8f9fa;
+            width: 50%;
+            margin: 0 auto;
+        }
+        @media (max-width: 600px) {
+            .container {
+            width: 80%;
+            }
+        }
+        ::placeholder {
+            font-size: 14px;
+        }
+        h2 {
+            cursor: default;
+        }
+        a {
+            cursor: pointer;
+        }
+    </style>
 </head>
-
 <body>
 
-<div class="container text-center">
-    <h2 class=" text-primary m-2">Update Question</h2>
-</div>
-<hr>
-<div class="d-flex justify-content-center align-items-center mb-3">
-    <a th:href="@{/home}" class="fs-6 fw-medium text-info">BACK</a>
-</div>
-<hr>
-<div class="container">
-    <div class="d-flex justify-content-center gap-2">
-
-        <form id="questionUpdateFormId"
-              th:action="@{'/project/' + ${projectId} + '/questions/new'}"
-
-              th:object="${attrQuestion}"
-              method="post">
-
-            <div class="form-floating">
-                <textarea th:field="*{question}" class="form-control" placeholder="Question" id="questionAreaId" style="height: 100px"></textarea>
-                <label for="questionAreaId">Question</label>
-            </div>
-
-            <div class="row mt-3">
-                <div class="col">
-                    <input th:field="*{responsiblePerson}" type="text" class="form-control" placeholder="Responsible person" aria-label="Responsible person">
-                </div>
-                <div class="col">
-                    <input th:field="*{createDate}" type="date" class="form-control" placeholder="Create date" aria-label="Create date">
-                </div>
-                <div class="col">
-                    <input th:field="*{dueDate}" type="date" class="form-control" placeholder="Due date" aria-label="Due date">
-                </div>
-            </div>
-
-            <div class="d-flex justify-content-center align-items-center mt-4">
-                <div class="m-2">
-                    <input type="submit" class="btn btn-primary" value="UPDATE QUESTION"/>
-                </div>
-                <div class="m-2">
-                    <input type="submit" class="btn btn-primary" value="MARK AS SOLVED"/>
-                </div>
-            </div>
-
-        </form>
-
+<div class="container p-4">
+    <div class="row align-items-center mb-4">
+        <div class="col">
+            <h2 class="text-info">Edit question</h2>
+        </div>
+        <div class="col d-flex justify-content-end">
+            <a th:href="@{'/project/' + ${projectId} + '/questions'}" class="fs-6 fw-medium text-info">CANCEL</a>
+        </div>
     </div>
+
+    <div class="d-flex justify-content-center align-items-center mt-4">
+
+        <div class="m-2">
+            <form th:action="@{'/project/' + ${projectId} + '/questions/' + ${attrQuestion.questionId} + '/resolve'}" method="post">
+                <div class="d-flex justify-content-center align-items-center mt-4">
+                    <div class="m-2">
+                        <input type="submit" class="btn btn-primary" name="action" value="Mark resolved"/>
+                    </div>
+                </div>
+            </form>
+        </div>
+    </div>
+
+
 </div>
-
-
-
-
 
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
