--- a/src/main/resources/templates/project/questions.html
+++ b/src/main/resources/templates/project/questions.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
@@ -15,8 +14,12 @@
             margin: 0;
         }
         .container {
-            background-color: #f8f9fa;
             width: 50%;
+            margin: 0 auto;
+        }
+        .container2 {
+            background-color: #f8f9fa;
+            width: 100%;
             margin: 0 auto;
         }
         @media (max-width: 600px) {
@@ -36,52 +39,118 @@
     </style>
 </head>
 <body>
-<div class="container p-4">
-    <div class="row align-items-center mb-4">
-        <div class="col">
-            <h2 class="text-info">Protocol</h2>
-        </div>
-        <div class="col d-flex justify-content-end">
-            <a th:href="@{/home}" class="fs-6 fw-medium text-info">BACK</a>
-        </div>
+<div class="container">
+    <div class="container2 p-4">
+        <h2><span class="text-info">Project: </span><span th:text="${attrProjectShortName}"></span></h2>
     </div>
-    <div>
-        <table class="table table-hover">
-            <thead>
-            <tr>
-                <th>Question No</th>
-                <th>Question</th>
-                <th>Responsible</th>
-                <th>Create date</th>
-                <th>Due date</th>
-            </tr>
-            </thead>
-            <tbody>
-            <tr
-                    th:each="question,stat:${attrQuestions}"
-                    th:onclick="'javascript:showQuestionDetails(\'' + ${question.questionId} + '\');'">
+    <div class="container2 p-4 mt-4">
+        <div class="row align-items-center mb-4">
+            <div class="col">
+                <h2 class="text-info">Participants</h2>
+            </div>
+            <div class="col d-flex justify-content-end">
+                <a th:href="@{/project/all}" class="fs-6 fw-medium text-info">BACK</a>
+            </div>
+        </div>
+        <div>
+            <table class="table table-hover">
+                <thead>
+                <tr>
+                    <th>Id</th>
+                    <th>Company</th>
+                    <th>Tasks</th>
+                    <th>Representative</th>
+                    <th>Initials</th>
+                    <th>Position</th>
+                    <th>Contacts</th>
 
-                <td th:text="${question.questionNumber}">N/A</td>
-                <td th:text="${question.question}">N/A</td>
-                <td th:text="${question.responsiblePerson}">N/A</td>
-                <td th:text="${question.createDate}">N/A</td>
-                <td th:text="${question.dueDate}">N/A</td>
-            </tr>
-            </tbody>
-        </table>
+                </tr>
+                </thead>
+                <tbody>
+                <tr th:each="participant,stat:${attrParticipants}"
+                    th:onclick="'window.location.href=\'/project/' + ${projectId} + '/participants/' + ${participant.participantId} + '\''">
+
+                    <td th:text="${participant.participantId}">N/A</td>
+                    <td th:text="${participant.companyName}">N/A</td>
+                    <td th:text="${participant.tasks}">N/A</td>
+                    <td th:text="${participant.representativesName}">N/A</td>
+                    <td th:text="${participant.initials}">N/A</td>
+                    <td th:text="${participant.position}">N/A</td>
+                    <td>
+                        <span th:text="${participant.email}">N/A</span>
+                        <br>
+                        <span th:text="${participant.phone}">N/A</span>
+                    </td>
+                </tr>
+                </tbody>
+            </table>
+        </div>
+        <div class="d-flex justify-content-center gap-2">
+            <div>
+                <a th:href="@{/project/{projectId}/participants/new(projectId=${projectId})}" class="btn btn-primary"
+                   role="button">New Participant</a>
+            </div>
+        </div>
     </div>
-    <div class="d-flex justify-content-center gap-2">
-        <div>
-            <a th:href="@{/project/{projectId}/questions/new(projectId=${projectId})}" class="btn btn-primary"
-               role="button">Add Question</a>
+    <div class="container2 p-4 mt-4">
+        <div class="row align-items-center mb-4">
+            <div class="col">
+                <h2 class="text-info">Protocol</h2>
+            </div>
+            <div class="col d-flex justify-content-end">
+
+            </div>
         </div>
         <div>
-            <a th:href="@{/project/{projectId}/participants(projectId=${projectId})}" class="btn btn-primary"
-               role="button">EDIT PARTICIPANTS</a>
+            <table class="table table-hover">
+                <thead>
+                <tr>
+                    <th>No.</th>
+                    <th>Question</th>
+                    <th>Responsible</th>
+                    <th>Create date</th>
+                    <th>Due date</th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr
+                        th:each="question,stat:${attrQuestions}"
+                        th:onclick="'window.location.href=\'/project/' + ${projectId} + '/questions/' + ${question.questionId} + '\''">
+
+                    <td th:text="${question.questionNumber}">N/A</td>
+                    <td th:text="${question.question}">N/A</td>
+                    <td th:text="${question.responsiblePerson}">N/A</td>
+                    <td th:text="${question.createDate}">N/A</td>
+                    <td th:text="${question.dueDate}">N/A</td>
+                </tr>
+                </tbody>
+            </table>
+            <!-- Questions Pagination -->
+            <nav aria-label="Page navigation example">
+                <ul class="pagination pagination-sm justify-content-center">
+                    <li class="page-item" th:classappend="${currentPage == 0} ? disabled : ''">
+                        <a class="page-link" th:href="@{'/project/' + ${projectId} + '/questions?page=' + ${currentPage-1}}" tabindex="-1"
+                           aria-disabled="true">Previous</a>
+                    </li>
+                    <li class="page-item" th:each="pageNumber : ${#numbers.sequence(0, totalPages-1)}"
+                        th:classappend="${pageNumber == currentPage} ? active : ''">
+                        <a class="page-link" th:href="@{'/project/' + ${projectId} + '/questions?page=' + ${pageNumber}}"
+                           th:text="${pageNumber + 1}"></a>
+                    </li>
+                    <li class="page-item" th:classappend="${currentPage + 1 == totalPages} ? disabled : ''">
+                        <a class="page-link" th:href="@{'/project/' + ${projectId} + '/questions?page=' + ${currentPage+1}}">Next</a>
+                    </li>
+                </ul>
+            </nav>
+        </div>
+        <div class="d-flex justify-content-center gap-2">
+            <div>
+                <a th:href="@{/project/{projectId}/questions/new(projectId=${projectId})}" class="btn btn-primary"
+                   role="button">Add Question</a>
+            </div>
         </div>
     </div>
 </div>
-
 <script th:src="@{/js/question.js}">
 </script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
