--- a/src/main/resources/templates/project/questions.html
+++ b/src/main/resources/templates/project/questions.html
@@ -53,7 +53,7 @@
             </div>
         </div>
         <div>
-            <table class="table table-hover">
+            <table th:if="${!attrParticipants.empty}" class="table table-hover">
                 <thead>
                 <tr>
                     <th>Id</th>
@@ -102,7 +102,7 @@
             </div>
         </div>
         <div>
-            <table class="table table-hover">
+            <table th:if="${!attrQuestions.empty}" class="table table-hover">
                 <thead>
                 <tr>
                     <th>No.</th>
