--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -1,49 +1,63 @@
 <!DOCTYPE html>
-<html lang="en"
-      xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Home</title>
+    <title>Projects</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous"/>
     <style>
         body {
-            background-color: #ADD8E6;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            min-height: 100vh;
+            margin: 0;
         }
-        .btn-outline-primary {
-        color: white;
-        border-color: white;
-    }
+        .container {
+            background-color: #f8f9fa;
+            width: 50%;
+            height: 50vh;
+            margin: 0 auto;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+        @media (max-width: 600px) {
+            .container {
+            width: 80%;
+            }
+        }
+        ::placeholder {
+            font-size: 14px;
+        }
+        h1 {
+            cursor: default;
+            font-size: 3rem;
+        }
+        .row {
+            width: 100%;
+        }
     </style>
 </head>
 <body>
-<div class="container p-5">
-    <h1 class="text-center text-primary m-2">Protocol Management App v.1.0</h1>
-</div>
-<hr>
-<div class="container mt-5 pt-5">
-
-    <div class="container text-center">
-        <div class="row align-items-center">
-            <div class="col">
-
+<div class="container p-4">
+    <div class="row">
+        <div class="col">
+            <h1 class="text-info m-0 p-0">PROTOCOL <br> SUPPORT <br> APP <br> v.1.0.basic</h1>
+        </div>
+        <div class="col d-flex flex-column align-items-center">
+            <div class="mt-auto">
+                <a id="openProjectButtonId" th:href="@{/project/all}" class="btn btn-primary" role="button">
+                    Open project</a>
             </div>
-            <div class="col">
-                <a id="openProjectButtonId" th:href="@{/project/all}" class="btn btn-outline-primary btn-lg" role="button">OPEN PROJECT</a>
-            </div>
-            <div class="col">
-                <a th:href="@{/project/new}" class="btn btn-outline-primary btn-lg" role="button">NEW PROJECT</a>
-            </div>
-            <div class="col">
-
+            <div class="mt-4 mb-2">
+                <a th:href="@{/project/new}" class="btn btn-primary" role="button">Create project</a>
             </div>
         </div>
-
     </div>
 </div>
 
-<script th:src="@{/js/app.js}"></script>
-
+<script th:src="@{/js/home.js}"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
