--- a/src/main/resources/templates/project/question_edit.html
+++ b/src/main/resources/templates/project/question_edit.html
@@ -40,27 +40,29 @@
 <div class="container p-4">
     <div class="row align-items-center mb-4">
         <div class="col">
-            <h2 class="text-info">Edit question</h2>
+            <h2 class="text-info">Add comment</h2>
         </div>
         <div class="col d-flex justify-content-end">
             <a th:href="@{'/project/' + ${projectId} + '/questions'}" class="fs-6 fw-medium text-info">CANCEL</a>
         </div>
     </div>
-    <form th:action="@{'/project/' + ${projectId} + '/questions/' + ${attrQuestion.questionId} + '/resolve'}"
-          method="post">
+    <form th:action="@{'/project/' + ${projectId} + '/questions/' + ${attrQuestion.questionId} + '/addComment'}"
+          method="post"
+          id="commentForm">
         <div class="form-floating">
             <textarea name="comment" class="form-control" placeholder="Add comment" id="commentAreaId"
-                      style="height: 100px"></textarea>
+                      style="height: 100px" th:text="${attrQuestion.comment}"></textarea>
             <label for="commentAreaId">Add comment</label>
         </div>
         <div class="d-flex justify-content-center align-items-center mt-4">
             <div class="m-2">
-                <input type="submit" class="btn btn-primary" value="Mark resolved"/>
+                <input type="submit" class="btn btn-primary" value="Add comment"/>
             </div>
         </div>
     </form>
 </div>
 
+<script th:src="@{/js/question_edit.js}"></script>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
