--- a/src/main/resources/templates/project/question_edit.html
+++ b/src/main/resources/templates/project/question_edit.html
@@ -51,7 +51,7 @@
           id="commentForm">
         <div class="form-floating">
             <textarea name="comment" class="form-control" placeholder="Add comment" id="commentAreaId"
-                      style="height: 100px" th:text="${attrQuestion.comment}"></textarea>
+                      style="height: 100px"></textarea>
             <label for="commentAreaId">Add comment</label>
         </div>
         <div class="d-flex justify-content-center align-items-center mt-4">
